[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Menus/Grids/menu_8x3_01.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Menu/menu_boxes_P8_225x250.png" type="Texture" id=2]

[node name="Menu_8x3_01" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite01" type="Sprite" parent="."]
position = Vector2( -791, -251 )
texture = ExtResource( 2 )
hframes = 12
frame = 10

[node name="Sprite02" type="Sprite" parent="."]
position = Vector2( -565, -251 )
texture = ExtResource( 2 )
hframes = 12
frame = 10

[node name="Sprite03" type="Sprite" parent="."]
position = Vector2( -339, -251 )
texture = ExtResource( 2 )
hframes = 12
frame = 10

[node name="Sprite04" type="Sprite" parent="."]
position = Vector2( -113, -251 )
texture = ExtResource( 2 )
hframes = 12
frame = 10

[node name="Sprite05" type="Sprite" parent="."]
position = Vector2( 113, -251 )
texture = ExtResource( 2 )
hframes = 12
frame = 10

[node name="Sprite06" type="Sprite" parent="."]
position = Vector2( 339, -251 )
texture = ExtResource( 2 )
hframes = 12
frame = 10

[node name="Sprite07" type="Sprite" parent="."]
position = Vector2( 565, -251 )
texture = ExtResource( 2 )
hframes = 12
frame = 10

[node name="Sprite08" type="Sprite" parent="."]
position = Vector2( 791, -251 )
texture = ExtResource( 2 )
hframes = 12
frame = 10

[node name="Sprite09" type="Sprite" parent="."]
position = Vector2( -791, 0 )
texture = ExtResource( 2 )
hframes = 12
frame = 10

[node name="Sprite10" type="Sprite" parent="."]
position = Vector2( -565, 0 )
texture = ExtResource( 2 )
hframes = 12
frame = 10

[node name="Sprite11" type="Sprite" parent="."]
position = Vector2( -339, 0 )
texture = ExtResource( 2 )
hframes = 12
frame = 10

[node name="Sprite12" type="Sprite" parent="."]
position = Vector2( -113, 0 )
texture = ExtResource( 2 )
hframes = 12
frame = 10

[node name="Sprite13" type="Sprite" parent="."]
position = Vector2( 113, 0 )
texture = ExtResource( 2 )
hframes = 12
frame = 10

[node name="Sprite14" type="Sprite" parent="."]
position = Vector2( 339, 0 )
texture = ExtResource( 2 )
hframes = 12
frame = 10

[node name="Sprite15" type="Sprite" parent="."]
position = Vector2( 565, 0 )
texture = ExtResource( 2 )
hframes = 12
frame = 10

[node name="Sprite16" type="Sprite" parent="."]
position = Vector2( 791, 0 )
texture = ExtResource( 2 )
hframes = 12
frame = 10

[node name="Sprite17" type="Sprite" parent="."]
position = Vector2( -791, 251 )
texture = ExtResource( 2 )
hframes = 12
frame = 10

[node name="Sprite18" type="Sprite" parent="."]
position = Vector2( -565, 251 )
texture = ExtResource( 2 )
hframes = 12
frame = 10

[node name="Sprite19" type="Sprite" parent="."]
position = Vector2( -339, 251 )
texture = ExtResource( 2 )
hframes = 12
frame = 10

[node name="Sprite20" type="Sprite" parent="."]
position = Vector2( -113, 251 )
texture = ExtResource( 2 )
hframes = 12
frame = 10

[node name="Sprite21" type="Sprite" parent="."]
position = Vector2( 113, 251 )
texture = ExtResource( 2 )
hframes = 12
frame = 10

[node name="Sprite22" type="Sprite" parent="."]
position = Vector2( 339, 251 )
texture = ExtResource( 2 )
hframes = 12
frame = 10

[node name="Sprite23" type="Sprite" parent="."]
position = Vector2( 565, 251 )
texture = ExtResource( 2 )
hframes = 12
frame = 10

[node name="Sprite24" type="Sprite" parent="."]
position = Vector2( 791, 251 )
texture = ExtResource( 2 )
hframes = 12
frame = 10
